--- a/MusicApp/app/src/main/AndroidManifest.xml
+++ b/MusicApp/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/rock">
     </activity>
     <activity
-        android:name=".Pay"
+        android:name=".Play"
         android:label="@string/pay_method">
     </activity>
   </application>
